display amount of input data, and number of notification before and after filter applied. Change display of file loader for a simpler button

--- a/main.css
+++ b/main.css
@@ -138,3 +138,10 @@ body {
 	padding-top: 5px;
 	border-top: solid lightgrey 1px;
 }
+
+.notifAmount
+{
+	margin : auto;
+	margin-top : 10px;
+	text-align: center;
+}
